Fix CORS configuration conflicts and exact origin matching